--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FirebaseRTC</title>
     <link rel="stylesheet" href="./main.css">
-    <!-- <script src="https://cdn.metered.ca/sdk/frame/1.4.3/sdk-frame.min.js"></script> -->
+    <script src="https://cdn.metered.ca/sdk/frame/1.4.3/sdk-frame.min.js" defer></script>
     <script type="module" src="./app.js" defer></script>
 </head>
 
@@ -29,8 +29,7 @@
 
 
     <div class="idRoom"></div>
-    <div id="meet">
-        <iframe id="metered-frame" frameborder="0"></iframe>
+    <div id="metered-frame">
     </div>
 </body>
 
